# home-assistant-pool-assistant

./: README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml
custom_components/pool_assistant/: __init__.py  assessment.py  chemistry.py  config_flow.py  const.py  manifest.json  measurement.py  select.py  sensor.py  strings.json
custom_components/pool_assistant/translations/: de.json
docs/: pool-water-chemistry.md
scripts/: deploy-local.sh
tests/: test_assessment.py  test_chemistry.py  test_measurement.py
